# resfetch

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: build.yml  image.yml  release.yml  rust.yml
src/: main.rs
