[package]
name = "resfetch"
version = "1.1.0"
authors = ["HitBlast <hitblastlive@gmail.com>", "furtidev <megaphone@poto.cafe>"]
edition = "2021"
description = "A fast and minimal alternative to neofetch"
keywords = ["system", "neofetch", "fetch", "sysfetch", "cli"]
repository = "https://github.com/hitblast/resfetch"
license = "MIT"
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libmacchina = "7"
colored = "2.1.0"